# rbacrab

./: Cargo.toml  README.md
benches/: rbac_benchmarks.rs
src/: example.rs  lib.rs  macro.rs  registry.rs  service.rs  tests.rs
