[package]
name = "rbacrab"
version = "0.0.2"
edition = "2024"
description = "Rust ЁЯжАRBACЁЯжА library with some crabbyЁЯжАЁЯзЩ macro magic! Not so blazingly fast yet, but has all ЁЯЪАЁЯЪАЁЯЪА chances."
authors = [
    "Kirill Lebedev (https://github.com/klebed)", 
    ]
repository = "https://github.com/klebed/rbacrab"
license = "MIT"
readme = "README.md"
keywords = ["library", "rbac", "authorization"]
categories = ["security", "web-programming"]
publish = true

[dependencies]
serde = {version = "1.0", features = ["serde_derive"]}
arc-swap = "1.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1.0"

[[bench]]
name = "rbac_benchmarks"
harness = false